using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimationParameters
{
    public const string Death = "Death";
    public const string PlayerTakeDamage = "TakeDamage";
    public static readonly string[] EnemyTakeDamage = {"TakeDamage1", "TakeDamage2"};
    public const string PrecisionCounter = "PrecisionCounter";
    public const string PhoenixShift = "PhoenixShift";
}
